package strategy.generics;

public interface ContextStragtegy {
    public void setStrategy(ShapeStrategy strategy);

    public   void  draw();
}
