package strategy.generics;

public interface ShapeStrategy {

    public  void draw();
}
